kuber-homeworks/1.4/sol2/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend

spec:
  ports:
    - name: backend
      port: 80
      protocol: TCP
  selector:
    app: backend
