kuber-homeworks/1.4/sol2/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend

spec:
  ports:
    - name: frontend
      port: 80
      protocol: TCP
  selector:
    app: frontend
